backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
#   tls:
#   - hosts:
#     - gatsbeta.local
#     secretName: cafe-secret
  rules:
  - host: app.gatsby.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 4002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
